--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
         </div>
         <div class="css">
           <h1>CSS3</h1>
-          <img src="img/icons8-css3-96.png" alt="">
+          <img src="img/icons8-css3-96.png" alt="cssロゴ">
         </div>
         <div class="js">
           <h1>JavaScript</h1>
-          <img src="img/icons8-javascript-96.png" alt="">
+          <img src="img/icons8-javascript-96.png" alt="jsロゴ">
         </div>
       </div>
       <p>上記のHTML,CSS,JavaSciript(jQuery)を用いた簡単なコーディングは可能です。<br>Scss,Bootstrap,レスポンシブ対応も簡単な活用は可能です。<br>技術について独学でしか学んでいないので不安が多いですが<br>目の前のことに積極的に取り組み最大限努力致します。</p>
@@ -86,19 +86,19 @@
       <h1>作品</h1>
       <div class="works">
         <div class="megane">
-          <img src="img/_C__Users_Daichi_S_Desktop_practice_index.html (2).png" alt="メガネ画像">
+          <img src="img/write.png" alt="メガネ画像">
           <p>Write模写</p>
         </div>
         <div class="paspol">
-          <img src="img/_C__Users_Daichi_S_Desktop_MyPaspol_index.html.png" alt="パスポルトップ画像">
+          <img src="img/paspol.png" alt="パスポルトップ画像">
           <p>PAS-POL模写</p>
         </div>
       </div>
       <div class="modal-works mmm">
-        <img src="img/screencapture-file-C-Users-Daichi-S-Desktop-practice-index-html-2021-01-18-18_34_38.png" alt="メガネ">
+        <img src="img/megane-long.png" alt="メガネ">
       </div>
       <div class="modal-works ppp">
-        <img src="img/screencapture-file-C-Users-Daichi-S-Desktop-MyPaspol-index-html-2021-01-18-18_52_22.png" alt="パスポル">
+        <img src="img/paspol-long.png" alt="パスポル">
       </div>
     </section>
 
